# FuzzyDoo

./: .gitignore  Makefile  README.md  build.py  pyproject.toml
.github/workflows/: docs.yaml
examples/setup/: README.md
examples/setup/free5gc/: README.md  changes.patch  config.yaml
examples/setup/free5gc/UERANSIM/: gnb.yaml  gnb_w_proxy.yaml
examples/setup/free5gc/scripts/: health_check.py  register_sim.py
examples/setup/oai/: README.md  changes.patch  config.yaml
examples/setup/oai/UERANSIM/: gnb.yaml  gnb_w_proxy.yaml  ue.yaml
examples/setup/oai/scripts/: health_check.py
examples/setup/open5gs/: README.md  changes.patch  config.yaml
examples/setup/open5gs/UERANSIM/: gnb.yaml  gnb_w_proxy.yaml  ue.yaml
examples/setup/open5gs/scripts/: register_sim.py
fuzzydoo/: agent.py  decoder.py  encoder.py  engine.py  fuzzable.py  main.py  message_source.py  monitor.py  mutator.py  protocol.py  publisher.py  target.py  transformer.py
fuzzydoo/agents/: __init__.py  command_exec.py  compose_restart.py  container_monitor.py  network_function_proxy.py  network_proxy.py  network_sniffer.py  sctp_proxy.py  ueransim_controller.py
fuzzydoo/agents/grpc_agent/: __init__.py  agent.proto  grpc_client.py  grpc_server.py  serializer.py
fuzzydoo/agents/grpc_agent/serializers/: __init__.py  execution_ctx.py  protocol.py
fuzzydoo/engine/: engine.py
fuzzydoo/mutators/: __init__.py  message.py  message_mutator.py
fuzzydoo/mutators/nas/: __init__.py  buffer_type.py  int_type.py  sequence_type.py  string_type.py
fuzzydoo/mutators/ngap/: __init__.py  aper.py  bool_type.py  enum.py  enum_type.py  information_element.py  int.py  int_type.py  message.py  oid.py  oid_type.py  real.py  real_type.py  rel_oid.py  rel_oid_type.py  sequence_type.py  string_type.py  time_type.py
fuzzydoo/proto/: __init__.py  capability_protocol.py  message.py  mutable.py  protocol.py
fuzzydoo/proto/nas/: __init__.py  messages.py  protocol.py  types.py
fuzzydoo/proto/ngap/: __init__.py  aper.py  init.py  messages.py  protocol.py  types.py
fuzzydoo/publishers/: __init__.py  sctp_proxy.py
fuzzydoo/transformers/: nas_security.py
fuzzydoo/utils/: __init__.py  chars.py  errs.py  graph.py  network.py  other.py  register.py  threads.py
