[tool.poetry]
name = "fuzzydoo"
version = "0.1.0"
description = "A Mutation-Based Structure-Aware Fuzzer for 5G Core Networks"
authors = ["Gabriele Pongelli <pongelligabriele@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.group.docs]
optional = true

[tool.poetry.dependencies]
python = "^3.12"
pysctp = "^0.7.2"
pycrate = "^0.7.7"
grpcio = "^1.67.0"
grpcio-tools = "^1.67.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
container-monitor = 'fuzzydoo.agents.container_monitor:main'
compose-restart = 'fuzzydoo.agents.compose_restart:main'
