[tool.poetry]
name = "fuzzydoo"
version = "0.2.0"
description = "A Mutation-Based Structure-Aware Fuzzer for 5G Core Networks"
authors = ["Gabriele Pongelli <pongelligabriele@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.build]
optional = true

[tool.poetry.dependencies]
python = "^3.13"
pysctp = "^0.7.2"
pycrate = "^0.7.7"
grpcio = "^1.67.1"
scapy = "^2.6.0"
pyyaml = "^6.0.2"
protobuf = "^5.28.3"
CryptoMobile = { git = "https://github.com/mitshell/CryptoMobile.git", rev = "b13e59b" }

[tool.poetry.group.docs.dependencies]
pdoc = "^14.7.0"

[tool.poetry.group.build.dependencies]
grpcio-tools = "^1.67.1"

[build-system]
requires = ["poetry-core", "setuptools", "grpcio-tools<=1.67.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.scripts]
container-monitor = 'fuzzydoo.agents.container_monitor:main'
compose-restart = 'fuzzydoo.agents.compose_restart:main'
network-sniffer = 'fuzzydoo.agents.network_sniffer:main'
ueransim-controller = 'fuzzydoo.agents.ueransim_controller:main'
network-proxy = 'fuzzydoo.agents.network_proxy:main'
fuzzydoo = 'fuzzydoo.main:main'
